# smartcampus

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start_all.sh  stop_all.sh  terraform.tfstate
gateway/: gateway.py
middleware/kafka/: consumidor.py  controle_pb2.py  controle_pb2_grpc.py  produtor.py  servidor.py
painel/: app.py
painel/static/: script.js  style.css
painel/templates/: index.html
simuladores/: sensor_luminosidade.py  sensor_presenca.py  sensor_temperatura.py
terraform/: main.tf  terraform.tfstate  terraform.tfstate.backup  vars.tf
