[tool.poetry]
name = "smartcampus"
version = "0.1.0"
description = "Projeto de programação distribuida."
authors = [
  "Fabio Oliveira",
  "Joao Renan",
  "Guilherme Yokokura"
]

[tool.poetry.dependencies]
python = "^3.11"
kafka-python = "^2.0.2"
flask = "^3.0.3"
flask-cors = "^4.0.0"
botocore = ">=1.35.0,<1.36.0"
cement = "==2.10.14"
colorama = ">=0.4.6,<0.5"
pathspec = "==0.10.1"
python-dateutil = ">=2.1,<3.0.0"
requests = ">=2.31,<3"
setuptools = ">=20.0"
semantic_version = ">=2.10.0,<2.11"
termcolor = ">=2.4.0,<3"
wcwidth = ">=0.2.13,<0.3"
PyYAML = ">=5.3.1,<6.1"
urllib3 = ">=1.26.5,<2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

